[package]
name = "threadless_loader_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "lib" }
libaes = "0.6.4"
rand = "0.8.5"
base64 = "0.21.0"
clap = { version = "4.3.5", features = ["derive"] }
